@@ -1,14 +1,18 @@
 package com.example.view;
 
+import java.io.InputStream;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
-import java.io.InputStream;
+import java.util.Objects;
+import java.util.TimeZone;
 
 import com.example.controller.MainController;
+import com.example.model.RecurrenceRule;
+import com.example.model.Reminder;
 import com.example.model.Schedule;
 
 import javafx.application.Platform;
@@ -16,6 +20,7 @@ import javafx.beans.binding.Bindings;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Cursor;
+import javafx.scene.Node;
 import javafx.scene.control.Button;
 import javafx.scene.control.ButtonBar;
 import javafx.scene.control.ButtonType;
@@ -24,26 +29,30 @@ import javafx.scene.control.DatePicker;
 import javafx.scene.control.Dialog;
 import javafx.scene.control.DialogPane;
 import javafx.scene.control.Label;
+import javafx.scene.control.ScrollPane;
 import javafx.scene.control.TextArea;
 import javafx.scene.control.TextField;
 import javafx.scene.control.ToggleButton;
 import javafx.scene.control.ToggleGroup;
+import javafx.scene.image.Image;
+import javafx.scene.input.KeyCode;
+import javafx.scene.input.KeyEvent;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.Region;
 import javafx.scene.layout.VBox;
 import javafx.scene.paint.Color;
 import javafx.scene.shape.Circle;
-import javafx.scene.Node;
-import javafx.scene.image.Image;
 import javafx.stage.Stage;
 
 public class ScheduleDialog extends Dialog<Schedule> {
     private static final String APP_ICON_RESOURCE = "/icons/macaron_todo_icon.png";
 
-    private MainController controller;
-    private Schedule schedule;
-    private boolean isEditMode;
+    private final MainController controller;
+    private final Schedule schedule;
+    private final boolean isEditMode;
+    private final IosWheelDateTimePopup wheelPopup;
+    private final List<Reminder> reminderDrafts = new ArrayList<>();
 
     private TextField nameField;
     private TextArea descriptionArea;
@@ -53,38 +62,37 @@ public class ScheduleDialog extends Dialog<Schedule> {
     private TextField categoryField;
     private TextField tagsField;
     private ToggleButton reminderToggle;
-    private DatePicker reminderDatePicker;
-    private ComboBox<String> reminderTimeCombo;
-    
+    private VBox reminderEditor;
+    private VBox reminderListBox;
+    private Button addReminderButton;
+    private Label recurrenceSummaryLabel;
+    private Button recurrenceEditButton;
+    private Button recurrenceClearButton;
+    private RecurrenceRule recurrenceDraft;
+
     private String selectedColorHex = "#2196F3";
     private HBox colorPalette;
-    
+
     private Label nameErrorLabel;
     private Label dateErrorLabel;
 
     public ScheduleDialog(Schedule schedule, MainController controller) {
         this.controller = controller;
         this.schedule = schedule;
-        this.isEditMode = (schedule != null);
+        this.isEditMode = schedule != null;
+        this.wheelPopup = new IosWheelDateTimePopup(controller);
 
         initializeDialog();
         initializeForm();
-
-        if (isEditMode) {
-            loadScheduleData();
-        }
+        loadScheduleData();
     }
 
     private void initializeDialog() {
         DialogPane dialogPane = getDialogPane();
         dialogPane.getStyleClass().add("schedule-dialog-pane");
-        
-        // Hide the native header completely
         dialogPane.setHeaderText(null);
         dialogPane.setGraphic(null);
         dialogPane.setHeader(null);
-        
-        // Set window title for OS decoration
         setTitle(isEditMode ? text("schedule.dialog.editTitle") : text("schedule.dialog.createTitle"));
 
         ButtonType saveButtonType = new ButtonType(text("common.save"), ButtonBar.ButtonData.OK_DONE);
@@ -93,38 +101,31 @@ public class ScheduleDialog extends Dialog<Schedule> {
         dialogPane.getStylesheets().setAll(controller.getCurrentThemeStylesheets());
         controller.applyDialogPreferences(dialogPane);
         setOnShown(event -> applyDialogIcon());
+        setOnHidden(event -> wheelPopup.hide());
 
-        setResultConverter(dialogButton -> {
-            if (dialogButton == saveButtonType) {
-                return createScheduleFromForm();
-            }
-            return null;
-        });
+        setResultConverter(dialogButton -> dialogButton == saveButtonType ? createScheduleFromForm() : null);
     }
 
     private void applyDialogIcon() {
         if (getDialogPane().getScene() == null) {
             return;
         }
-        if (!(getDialogPane().getScene().getWindow() instanceof Stage)) {
+        if (!(getDialogPane().getScene().getWindow() instanceof Stage stage)) {
             return;
         }
-        Stage stage = (Stage) getDialogPane().getScene().getWindow();
         try (InputStream iconStream = getClass().getResourceAsStream(APP_ICON_RESOURCE)) {
-            if (iconStream == null) {
-                return;
+            if (iconStream != null) {
+                stage.getIcons().setAll(new Image(iconStream));
             }
-            stage.getIcons().setAll(new Image(iconStream));
         } catch (Exception ignored) {
         }
     }
 
     private void initializeForm() {
-        VBox rootBox = new VBox(24); // Increased from 20 for more breathing room
+        VBox rootBox = new VBox(24);
         rootBox.getStyleClass().add("schedule-dialog-root");
         rootBox.setPadding(new Insets(30, 40, 30, 40));
-        
-        // 1. 标题 (Hero Section)
+
         VBox titleBox = new VBox(2);
         nameField = new TextField();
         nameField.setPromptText(text("schedule.dialog.name.prompt"));
@@ -134,17 +135,14 @@ public class ScheduleDialog extends Dialog<Schedule> {
         nameErrorLabel.setVisible(false);
         nameErrorLabel.setManaged(false);
         titleBox.getChildren().addAll(nameField, nameErrorLabel);
-        
-        // 2. 描述 (Hero Section)
+
         descriptionArea = new TextArea();
         descriptionArea.setPromptText(text("schedule.dialog.description.prompt"));
         descriptionArea.getStyleClass().add("hero-desc-input");
         descriptionArea.setPrefRowCount(3);
         descriptionArea.setWrapText(true);
-        
-        // 3. 时间设置 (并排)
-        HBox dateBox = new HBox(24); // Increased from 20
-        
+
+        HBox dateBox = new HBox(24);
         VBox startBox = new VBox(8);
         HBox.setHgrow(startBox, Priority.ALWAYS);
         Label startLabel = new Label(text("schedule.dialog.startDate"));
@@ -154,7 +152,7 @@ public class ScheduleDialog extends Dialog<Schedule> {
         startDatePicker.getStyleClass().add("modern-input");
         DatePickerArrowSupport.install(startDatePicker, controller);
         startBox.getChildren().addAll(startLabel, startDatePicker);
-        
+
         VBox dueBox = new VBox(8);
         HBox.setHgrow(dueBox, Priority.ALWAYS);
         Label dueLabel = new Label(text("schedule.dialog.dueDateRequired"));
@@ -168,46 +166,22 @@ public class ScheduleDialog extends Dialog<Schedule> {
         dateErrorLabel.setVisible(false);
         dateErrorLabel.setManaged(false);
         dueBox.getChildren().addAll(dueLabel, dueDatePicker, dateErrorLabel);
-        
         dateBox.getChildren().addAll(startBox, dueBox);
-        
-        // 4. 优先级 (分段控制器)
+
         VBox priorityBox = new VBox(8);
         Label priorityLabel = new Label(text("schedule.dialog.priority"));
         priorityLabel.getStyleClass().add("field-label");
-        
         HBox segmentedControl = new HBox();
         segmentedControl.getStyleClass().add("segmented-control");
         priorityGroup = new ToggleGroup();
-        
-        ToggleButton highBtn = new ToggleButton(controller.priorityDisplayName(Schedule.PRIORITY_HIGH));
-        highBtn.setUserData(Schedule.PRIORITY_HIGH);
-        highBtn.getStyleClass().addAll("segment-button", "segment-high");
-        highBtn.setToggleGroup(priorityGroup);
-        HBox.setHgrow(highBtn, Priority.ALWAYS);
-        highBtn.setMaxWidth(Double.MAX_VALUE);
-        
-        ToggleButton midBtn = new ToggleButton(controller.priorityDisplayName(Schedule.PRIORITY_MEDIUM));
-        midBtn.setUserData(Schedule.PRIORITY_MEDIUM);
-        midBtn.getStyleClass().addAll("segment-button", "segment-mid");
-        midBtn.setToggleGroup(priorityGroup);
-        midBtn.setSelected(true);
-        HBox.setHgrow(midBtn, Priority.ALWAYS);
-        midBtn.setMaxWidth(Double.MAX_VALUE);
-        
-        ToggleButton lowBtn = new ToggleButton(controller.priorityDisplayName(Schedule.PRIORITY_LOW));
-        lowBtn.setUserData(Schedule.PRIORITY_LOW);
-        lowBtn.getStyleClass().addAll("segment-button", "segment-low");
-        lowBtn.setToggleGroup(priorityGroup);
-        HBox.setHgrow(lowBtn, Priority.ALWAYS);
-        lowBtn.setMaxWidth(Double.MAX_VALUE);
-        
-        segmentedControl.getChildren().addAll(highBtn, midBtn, lowBtn);
+        segmentedControl.getChildren().addAll(
+            createPriorityToggle(Schedule.PRIORITY_HIGH, "segment-high"),
+            createPriorityToggle(Schedule.PRIORITY_MEDIUM, "segment-mid"),
+            createPriorityToggle(Schedule.PRIORITY_LOW, "segment-low")
+        );
         priorityBox.getChildren().addAll(priorityLabel, segmentedControl);
-        
-        // 5. 分类和标签 (并排)
-        HBox metaBox = new HBox(24); // Increased from 20
-        
+
+        HBox metaBox = new HBox(24);
         VBox categoryBox = new VBox(8);
         HBox.setHgrow(categoryBox, Priority.ALWAYS);
         Label categoryLabel = new Label(text("schedule.dialog.category"));
@@ -216,7 +190,7 @@ public class ScheduleDialog extends Dialog<Schedule> {
         categoryField.setPromptText(text("schedule.dialog.category.prompt"));
         categoryField.getStyleClass().add("modern-input");
         categoryBox.getChildren().addAll(categoryLabel, categoryField);
-        
+
         VBox tagsBox = new VBox(8);
         HBox.setHgrow(tagsBox, Priority.ALWAYS);
         Label tagsLabel = new Label(text("schedule.dialog.tags"));
@@ -224,17 +198,20 @@ public class ScheduleDialog extends Dialog<Schedule> {
         tagsField = new TextField();
         tagsField.setPromptText(text("schedule.dialog.tags.prompt"));
         tagsField.getStyleClass().add("modern-input");
+        tagsField.addEventFilter(KeyEvent.KEY_PRESSED, event -> {
+            if (event.getCode() == KeyCode.ENTER) {
+                event.consume();
+                commitTagEntryIntoField();
+            }
+        });
         tagsBox.getChildren().addAll(tagsLabel, tagsField);
-        
         metaBox.getChildren().addAll(categoryBox, tagsBox);
-        
-        // 6. 颜色标记 (预设色板)
+
         VBox colorBox = new VBox(8);
         Label colorLabel = new Label(text("schedule.dialog.color"));
         colorLabel.getStyleClass().add("field-label");
         colorPalette = new HBox(12);
         colorPalette.setAlignment(Pos.CENTER_LEFT);
-        
         List<String> presetColors = Arrays.asList("#2196F3", "#F44336", "#4CAF50", "#FF9800", "#FFC107", "#9C27B0", "#E91E63");
         for (String hex : presetColors) {
             Circle dot = new Circle(12, Color.web(hex));
@@ -244,72 +221,14 @@ public class ScheduleDialog extends Dialog<Schedule> {
             if (hex.equals(selectedColorHex)) {
                 dot.getStyleClass().add("color-dot-selected");
             }
-            dot.setOnMouseClicked(e -> {
-                selectedColorHex = hex;
-                for (Node node : colorPalette.getChildren()) {
-                    node.getStyleClass().remove("color-dot-selected");
-                }
-                dot.getStyleClass().add("color-dot-selected");
-            });
+            dot.setOnMouseClicked(e -> selectColor(hex, dot));
             colorPalette.getChildren().add(dot);
         }
         colorBox.getChildren().addAll(colorLabel, colorPalette);
-        
-        // 7. 提醒设置 (拨动开关和展开区域)
-        VBox reminderContainer = new VBox(10);
-        reminderContainer.getStyleClass().add("reminder-container");
-        
-        HBox switchBox = new HBox(10);
-        switchBox.setAlignment(Pos.CENTER_LEFT);
-        Label reminderLabel = new Label(text("schedule.dialog.reminder"));
-        reminderLabel.getStyleClass().add("field-label");
-        reminderLabel.setStyle("-fx-padding: 0;");
-        
-        reminderToggle = new ToggleButton();
-        reminderToggle.getStyleClass().add("modern-toggle-switch");
-        
-        Region spacer = new Region();
-        HBox.setHgrow(spacer, Priority.ALWAYS);
-        
-        switchBox.getChildren().addAll(reminderLabel, spacer, reminderToggle);
-        
-        HBox reminderDetails = new HBox(10);
-        reminderDetails.setAlignment(Pos.CENTER_LEFT);
-        reminderDetails.setVisible(false);
-        reminderDetails.setManaged(false);
-        
-        reminderDatePicker = new DatePicker(LocalDate.now());
-        reminderDatePicker.setMaxWidth(Double.MAX_VALUE);
-        reminderDatePicker.getStyleClass().add("modern-input");
-        DatePickerArrowSupport.install(reminderDatePicker, controller);
-        HBox.setHgrow(reminderDatePicker, Priority.ALWAYS);
-        
-        reminderTimeCombo = new ComboBox<>();
-        reminderTimeCombo.getItems().addAll(
-            "08:00", "09:00", "10:00", "11:00", "12:00",
-            "13:00", "14:00", "15:00", "16:00", "17:00",
-            "18:00", "19:00", "20:00", "21:00"
-        );
-        reminderTimeCombo.setValue("09:00");
-        reminderTimeCombo.setMaxWidth(Double.MAX_VALUE);
-        reminderTimeCombo.getStyleClass().add("modern-input");
-        HBox.setHgrow(reminderTimeCombo, Priority.ALWAYS);
-        
-        reminderDetails.getChildren().addAll(reminderDatePicker, reminderTimeCombo);
-        
-        reminderToggle.selectedProperty().addListener((obs, oldVal, newVal) -> {
-            reminderDetails.setVisible(newVal);
-            reminderDetails.setManaged(newVal);
-            if (newVal) {
-                reminderToggle.getStyleClass().add("on");
-            } else {
-                reminderToggle.getStyleClass().remove("on");
-            }
-        });
-        
-        reminderContainer.getChildren().addAll(switchBox, reminderDetails);
-        
-        // 组装根容器
+
+        VBox reminderContainer = buildReminderContainer();
+        VBox recurrenceContainer = buildRecurrenceContainer();
+
         rootBox.getChildren().addAll(
             titleBox,
             descriptionArea,
@@ -317,60 +236,188 @@ public class ScheduleDialog extends Dialog<Schedule> {
             priorityBox,
             metaBox,
             colorBox,
-            reminderContainer
+            reminderContainer,
+            recurrenceContainer
         );
-        
-        javafx.scene.control.ScrollPane scrollPane = new javafx.scene.control.ScrollPane(rootBox);
+
+        ScrollPane scrollPane = new ScrollPane(rootBox);
         scrollPane.setFitToWidth(true);
-        scrollPane.setHbarPolicy(javafx.scene.control.ScrollPane.ScrollBarPolicy.NEVER);
-        scrollPane.setVbarPolicy(javafx.scene.control.ScrollPane.ScrollBarPolicy.AS_NEEDED);
-        scrollPane.setPrefViewportHeight(550); // Set a preferred height to ensure content is scrollable and buttons are visible
+        scrollPane.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
+        scrollPane.setVbarPolicy(ScrollPane.ScrollBarPolicy.AS_NEEDED);
+        scrollPane.setPrefViewportHeight(550);
         scrollPane.setStyle("-fx-background-color: transparent; -fx-background: -color-bg-panel;");
-        
         getDialogPane().setContent(scrollPane);
-        
-        // Setup validation
+
         setupValidation();
-        
-        // Focus title
         Platform.runLater(() -> nameField.requestFocus());
     }
 
+    private ToggleButton createPriorityToggle(String value, String styleClass) {
+        ToggleButton button = new ToggleButton(controller.priorityDisplayName(value));
+        button.setUserData(value);
+        button.getStyleClass().addAll("segment-button", styleClass);
+        button.setToggleGroup(priorityGroup);
+        HBox.setHgrow(button, Priority.ALWAYS);
+        button.setMaxWidth(Double.MAX_VALUE);
+        if (Schedule.PRIORITY_MEDIUM.equals(value)) {
+            button.setSelected(true);
+        }
+        return button;
+    }
+
+    private VBox buildReminderContainer() {
+        VBox reminderContainer = new VBox(10);
+        reminderContainer.getStyleClass().add("reminder-container");
+
+        HBox switchBox = new HBox(10);
+        switchBox.setAlignment(Pos.CENTER_LEFT);
+        Label reminderLabel = new Label(text("schedule.dialog.reminder"));
+        reminderLabel.getStyleClass().add("field-label");
+        reminderLabel.setStyle("-fx-padding: 0;");
+
+        reminderToggle = new ToggleButton();
+        reminderToggle.getStyleClass().add("modern-toggle-switch");
+
+        Region spacer = new Region();
+        HBox.setHgrow(spacer, Priority.ALWAYS);
+        switchBox.getChildren().addAll(reminderLabel, spacer, reminderToggle);
+
+        reminderListBox = new VBox(8);
+        reminderListBox.getStyleClass().add("info-panel-reminder-list");
+
+        addReminderButton = new Button(text("info.reminder.add"));
+        addReminderButton.getStyleClass().addAll("button-secondary", "info-panel-secondary-action");
+        addReminderButton.setOnAction(event -> addReminder());
+
+        reminderEditor = new VBox(8, reminderListBox, addReminderButton);
+        reminderEditor.getStyleClass().add("info-panel-reminder-editor");
+
+        reminderToggle.selectedProperty().addListener((obs, oldVal, newVal) -> {
+            toggleStyleClass(reminderToggle, "on", Boolean.TRUE.equals(newVal));
+            updateReminderEditorState();
+        });
+
+        reminderContainer.getChildren().addAll(switchBox, reminderEditor);
+        return reminderContainer;
+    }
+
+    private VBox buildRecurrenceContainer() {
+        VBox recurrenceContainer = new VBox(10);
+        recurrenceContainer.getStyleClass().add("reminder-container");
+
+        Label recurrenceLabel = new Label(text("info.section.recurrence"));
+        recurrenceLabel.getStyleClass().add("field-label");
+
+        recurrenceSummaryLabel = new Label(text("recurrence.none"));
+        recurrenceSummaryLabel.getStyleClass().add("info-panel-recurrence-summary");
+        recurrenceSummaryLabel.setWrapText(true);
+
+        recurrenceEditButton = new Button(text("recurrence.edit"));
+        recurrenceEditButton.getStyleClass().addAll("button-secondary", "info-panel-secondary-action");
+        recurrenceEditButton.setOnAction(event -> editRecurrenceRule());
+
+        recurrenceClearButton = new Button(text("recurrence.clear"));
+        recurrenceClearButton.getStyleClass().addAll("button-secondary", "info-panel-secondary-action");
+        recurrenceClearButton.setOnAction(event -> {
+            recurrenceDraft = null;
+            updateRecurrenceEditor();
+        });
+
+        HBox recurrenceActions = new HBox(8, recurrenceEditButton, recurrenceClearButton);
+        recurrenceActions.setAlignment(Pos.CENTER_LEFT);
+        recurrenceContainer.getChildren().addAll(recurrenceLabel, recurrenceSummaryLabel, recurrenceActions);
+        return recurrenceContainer;
+    }
+
+    private void selectColor(String hex, Circle selectedDot) {
+        selectedColorHex = hex;
+        for (Node node : colorPalette.getChildren()) {
+            node.getStyleClass().remove("color-dot-selected");
+        }
+        selectedDot.getStyleClass().add("color-dot-selected");
+    }
+
+    private void loadScheduleData() {
+        if (!isEditMode || schedule == null) {
+            recurrenceDraft = null;
+            reminderDrafts.clear();
+            reminderToggle.setSelected(false);
+            renderReminderList();
+            updateReminderEditorState();
+            updateRecurrenceEditor();
+            return;
+        }
+
+        nameField.setText(schedule.getName());
+        descriptionArea.setText(schedule.getDescription());
+        startDatePicker.setValue(schedule.getStartDate());
+        dueDatePicker.setValue(schedule.getDueDate());
+
+        String priority = schedule.getPriority();
+        if (priority != null) {
+            for (javafx.scene.control.Toggle toggle : priorityGroup.getToggles()) {
+                if (toggle.getUserData() != null && Objects.equals(toggle.getUserData().toString(), priority)) {
+                    priorityGroup.selectToggle(toggle);
+                    break;
+                }
+            }
+        }
+
+        categoryField.setText(displayCategoryValue(schedule.getCategory()));
+        tagsField.setText(schedule.getTags());
+        selectCurrentColor(schedule.getColor());
+
+        reminderDrafts.clear();
+        List<Reminder> persistedReminders = schedule.getReminders();
+        if (persistedReminders != null && !persistedReminders.isEmpty()) {
+            reminderDrafts.addAll(normalizeReminderDrafts(persistedReminders));
+        } else if (schedule.getReminderTime() != null) {
+            reminderDrafts.add(new Reminder(schedule.getReminderTime()));
+        }
+        reminderToggle.setSelected(!reminderDrafts.isEmpty());
+        renderReminderList();
+        updateReminderEditorState();
+
+        recurrenceDraft = schedule.getRecurrenceRule();
+        updateRecurrenceEditor();
+    }
+
+    private void selectCurrentColor(String color) {
+        if (color != null && !color.isBlank()) {
+            selectedColorHex = color;
+        }
+        for (Node node : colorPalette.getChildren()) {
+            node.getStyleClass().remove("color-dot-selected");
+            if (node.getUserData() != null && node.getUserData().toString().equalsIgnoreCase(selectedColorHex)) {
+                node.getStyleClass().add("color-dot-selected");
+            }
+        }
+    }
+
     private void setupValidation() {
-        Button saveButton = (Button) getDialogPane().lookupButton(getDialogPane().getButtonTypes().get(0));
+        Button saveButton = (Button) getDialogPane().lookupButton(getDialogPane().getButtonTypes().getFirst());
         saveButton.getStyleClass().add("primary-save-button");
-        
         Button cancelButton = (Button) getDialogPane().lookupButton(getDialogPane().getButtonTypes().get(1));
         cancelButton.getStyleClass().add("ghost-cancel-button");
 
-        // Disable save button initially if new schedule and name is empty
         saveButton.disableProperty().bind(
-            Bindings.createBooleanBinding(() -> 
-                nameField.getText().trim().isEmpty() || dueDatePicker.getValue() == null,
-                nameField.textProperty(), dueDatePicker.valueProperty()
+            Bindings.createBooleanBinding(
+                () -> nameField.getText().trim().isEmpty() || dueDatePicker.getValue() == null,
+                nameField.textProperty(),
+                dueDatePicker.valueProperty()
             )
         );
-        
+
         nameField.textProperty().addListener((obs, oldV, newV) -> {
-            if (newV.trim().isEmpty()) {
-                nameField.getStyleClass().add("error-border");
-                nameErrorLabel.setVisible(true);
-                nameErrorLabel.setManaged(true);
-            } else {
-                nameField.getStyleClass().remove("error-border");
-                nameErrorLabel.setVisible(false);
-                nameErrorLabel.setManaged(false);
-            }
+            boolean empty = newV.trim().isEmpty();
+            toggleStyleClass(nameField, "error-border", empty);
+            nameErrorLabel.setVisible(empty);
+            nameErrorLabel.setManaged(empty);
         });
-        
-        dueDatePicker.valueProperty().addListener((obs, oldV, newV) -> {
-            validateDates();
-        });
-        
-        startDatePicker.valueProperty().addListener((obs, oldV, newV) -> {
-            validateDates();
-        });
-        
+
+        dueDatePicker.valueProperty().addListener((obs, oldV, newV) -> validateDates());
+        startDatePicker.valueProperty().addListener((obs, oldV, newV) -> validateDates());
+
         saveButton.addEventFilter(javafx.event.ActionEvent.ACTION, event -> {
             if (!validateDates() || nameField.getText().trim().isEmpty()) {
                 event.consume();
@@ -382,86 +429,189 @@ public class ScheduleDialog extends Dialog<Schedule> {
         boolean valid = true;
         if (dueDatePicker.getValue() == null) {
             dateErrorLabel.setText(text("schedule.dialog.dueDate.required"));
-            dueDatePicker.getStyleClass().add("error-border");
+            toggleStyleClass(dueDatePicker, "error-border", true);
             dateErrorLabel.setVisible(true);
             dateErrorLabel.setManaged(true);
             valid = false;
         } else if (startDatePicker.getValue() != null && startDatePicker.getValue().isAfter(dueDatePicker.getValue())) {
             dateErrorLabel.setText(text("schedule.dialog.dateRange.invalid"));
-            dueDatePicker.getStyleClass().add("error-border");
+            toggleStyleClass(dueDatePicker, "error-border", true);
             dateErrorLabel.setVisible(true);
             dateErrorLabel.setManaged(true);
             valid = false;
         } else {
-            dueDatePicker.getStyleClass().remove("error-border");
+            toggleStyleClass(dueDatePicker, "error-border", false);
             dateErrorLabel.setVisible(false);
             dateErrorLabel.setManaged(false);
         }
         return valid;
     }
 
-    private void loadScheduleData() {
-        nameField.setText(schedule.getName());
-        descriptionArea.setText(schedule.getDescription());
-        startDatePicker.setValue(schedule.getStartDate());
-        dueDatePicker.setValue(schedule.getDueDate());
-        
-        String priority = schedule.getPriority();
-        if (priority != null) {
-            for (javafx.scene.control.Toggle t : priorityGroup.getToggles()) {
-                if (t.getUserData() != null && t.getUserData().toString().equals(priority)) {
-                    priorityGroup.selectToggle(t);
-                    break;
-                }
-            }
-        }
-        
-        categoryField.setText(displayCategoryValue(schedule.getCategory()));
-        tagsField.setText(schedule.getTags());
-
-        if (schedule.getColor() != null && !schedule.getColor().isEmpty()) {
-            selectedColorHex = schedule.getColor();
-            for (Node node : colorPalette.getChildren()) {
-                node.getStyleClass().remove("color-dot-selected");
-                if (node.getUserData() != null && node.getUserData().toString().equalsIgnoreCase(selectedColorHex)) {
-                    node.getStyleClass().add("color-dot-selected");
-                }
-            }
-        }
-
-        if (schedule.getReminderTime() != null) {
-            reminderToggle.setSelected(true);
-            reminderDatePicker.setValue(schedule.getReminderTime().toLocalDate());
-            reminderTimeCombo.setValue(schedule.getReminderTime().format(DateTimeFormatter.ofPattern("HH:mm")));
-        }
-    }
-
     private Schedule createScheduleFromForm() {
         Schedule result = isEditMode ? schedule : new Schedule();
-
         result.setName(nameField.getText().trim());
         result.setDescription(descriptionArea.getText());
         result.setStartDate(startDatePicker.getValue());
         result.setDueDate(dueDatePicker.getValue());
-        
         if (priorityGroup.getSelectedToggle() != null) {
             result.setPriority(priorityGroup.getSelectedToggle().getUserData().toString());
         } else {
             result.setPriority(Schedule.PRIORITY_MEDIUM);
         }
-
         result.setCategory(resolveCategoryInput(categoryField.getText()));
         result.setTags(resolveTagsValue(tagsField.getText(), isEditMode));
         result.setColor(selectedColorHex);
 
         if (reminderToggle.isSelected()) {
-            LocalTime time = LocalTime.parse(reminderTimeCombo.getValue());
-            result.setReminderTime(LocalDateTime.of(reminderDatePicker.getValue(), time));
+            List<Reminder> normalized = normalizeReminderDrafts(reminderDrafts);
+            if (normalized.isEmpty()) {
+                normalized = List.of(new Reminder(resolveDefaultReminderSeed(dueDatePicker.getValue(), startDatePicker.getValue())));
+            }
+            result.setReminders(normalized);
         } else {
-            result.setReminderTime(null);
+            result.setReminders(List.of());
         }
 
+        result.setRecurrenceRule(recurrenceDraft);
         return result;
+    }
+
+    private void addReminder() {
+        LocalDateTime seed = resolveDefaultReminderSeed(dueDatePicker.getValue(), startDatePicker.getValue());
+        openReminderPicker(addReminderButton, seed, value -> {
+            reminderDrafts.add(new Reminder(value));
+            reminderToggle.setSelected(true);
+            renderReminderList();
+            updateReminderEditorState();
+        });
+    }
+
+    private void editReminder(Reminder target, Button owner) {
+        if (target == null) {
+            return;
+        }
+        openReminderPicker(owner, target.getRemindAtUtc(), value -> {
+            target.setRemindAtUtc(value);
+            renderReminderList();
+        });
+    }
+
+    private void removeReminder(String reminderId) {
+        reminderDrafts.removeIf(reminder -> Objects.equals(reminder.getId(), reminderId));
+        renderReminderList();
+        if (reminderDrafts.isEmpty()) {
+            reminderToggle.setSelected(false);
+        }
+        updateReminderEditorState();
+    }
+
+    private void openReminderPicker(Button owner, LocalDateTime seed, java.util.function.Consumer<LocalDateTime> onSave) {
+        wheelPopup.show(owner, text("info.reminder"), seed, value -> {
+            wheelPopup.hide();
+            if (value != null && onSave != null) {
+                onSave.accept(value);
+            }
+        });
+    }
+
+    private void renderReminderList() {
+        reminderListBox.getChildren().clear();
+        List<Reminder> normalized = normalizeReminderDrafts(reminderDrafts);
+        reminderDrafts.clear();
+        reminderDrafts.addAll(normalized);
+
+        int index = 1;
+        for (Reminder reminder : reminderDrafts) {
+            Button editButton = new Button(text("info.reminder.item", index, formatReminderButtonText(reminder)));
+            editButton.getStyleClass().addAll("button-secondary", "info-panel-reminder-button");
+            editButton.setMaxWidth(Double.MAX_VALUE);
+            HBox.setHgrow(editButton, Priority.ALWAYS);
+            editButton.setOnAction(event -> editReminder(reminder, editButton));
+
+            Button removeButton = new Button(text("common.remove"));
+            removeButton.getStyleClass().addAll("button-secondary", "info-panel-secondary-action");
+            removeButton.setOnAction(event -> removeReminder(reminder.getId()));
+
+            HBox row = new HBox(8, editButton, removeButton);
+            row.setAlignment(Pos.CENTER_LEFT);
+            row.getStyleClass().add("info-panel-reminder-row");
+            reminderListBox.getChildren().add(row);
+            index++;
+        }
+    }
+
+    private void updateReminderEditorState() {
+        boolean enabled = reminderToggle.isSelected();
+        reminderEditor.setVisible(enabled);
+        reminderEditor.setManaged(enabled);
+        addReminderButton.setDisable(!enabled);
+    }
+
+    private String formatReminderButtonText(Reminder reminder) {
+        if (reminder == null || reminder.getRemindAtUtc() == null) {
+            return text("common.unset");
+        }
+        InfoPanelView.TimeTriggerPresentation presentation =
+            InfoPanelView.buildTimeTriggerPresentation(controller, reminder.getRemindAtUtc(), false);
+        if (presentation.getSecondaryText().isBlank()) {
+            return presentation.getPrimaryText();
+        }
+        return presentation.getPrimaryText() + " | " + presentation.getSecondaryText();
+    }
+
+    private void editRecurrenceRule() {
+        LocalDateTime seed = resolveDefaultReminderSeed(dueDatePicker.getValue(), startDatePicker.getValue());
+        RecurrenceRuleDialog dialog = new RecurrenceRuleDialog(
+            controller,
+            recurrenceDraft,
+            seed,
+            resolveTimezone()
+        );
+        dialog.showAndWait().ifPresent(result -> {
+            recurrenceDraft = result.getRule();
+            updateRecurrenceEditor();
+        });
+    }
+
+    private void updateRecurrenceEditor() {
+        recurrenceSummaryLabel.setText(
+            recurrenceDraft != null && recurrenceDraft.isActive()
+                ? controller.recurrenceSummary(recurrenceDraft)
+                : text("recurrence.none")
+        );
+        recurrenceClearButton.setDisable(recurrenceDraft == null);
+    }
+
+    private String resolveTimezone() {
+        if (schedule != null && schedule.getTimezone() != null && !schedule.getTimezone().isBlank()) {
+            return schedule.getTimezone();
+        }
+        return TimeZone.getDefault().toZoneId().getId();
+    }
+
+    static List<Reminder> normalizeReminderDrafts(List<Reminder> reminders) {
+        if (reminders == null || reminders.isEmpty()) {
+            return List.of();
+        }
+        List<Reminder> normalized = new ArrayList<>();
+        for (Reminder reminder : reminders) {
+            if (reminder == null || reminder.getRemindAtUtc() == null) {
+                continue;
+            }
+            normalized.add(reminder.copy());
+        }
+        normalized.sort(Comparator.comparing(Reminder::getRemindAtUtc));
+        return normalized;
+    }
+
+    static LocalDateTime resolveDefaultReminderSeed(LocalDate dueDate, LocalDate startDate) {
+        if (dueDate != null) {
+            return dueDate.atTime(23, 59);
+        }
+        if (startDate != null) {
+            return startDate.atTime(9, 0);
+        }
+        return LocalDate.now().atTime(9, 0);
     }
 
     private String text(String key, Object... args) {
@@ -497,5 +647,65 @@ public class ScheduleDialog extends Dialog<Schedule> {
             return Schedule.normalizeTags(normalized);
         }
         return isEditMode ? "" : "";
+    }
+
+    private void commitTagEntryIntoField() {
+        String committed = commitTagEntryValue(tagsField.getText());
+        tagsField.setText(committed);
+        tagsField.positionCaret(committed.length());
+    }
+
+    static String commitTagEntryValue(String rawValue) {
+        String current = rawValue == null ? "" : rawValue;
+        int delimiter = lastTagDelimiterIndex(current);
+        String head = delimiter >= 0 ? trimTrailingDelimiters(current.substring(0, delimiter)) : "";
+        String candidate = delimiter >= 0 ? trimTrailingDelimiters(current.substring(delimiter + 1)) : trimTrailingDelimiters(current);
+        List<String> tags = new ArrayList<>(Schedule.splitTags(head));
+        for (String token : Schedule.splitTags(candidate)) {
+            if (!token.isEmpty() && !tags.contains(token)) {
+                tags.add(token);
+            }
+        }
+        return tags.isEmpty() ? "" : String.join(", ", tags);
+    }
+
+    private static final char[] TAG_DELIMITERS = {',', '\uFF0C'};
+
+    private static int lastTagDelimiterIndex(String value) {
+        int index = -1;
+        for (char delimiter : TAG_DELIMITERS) {
+            index = Math.max(index, value.lastIndexOf(delimiter));
+        }
+        return index;
+    }
+
+    private static String trimTrailingDelimiters(String value) {
+        if (value == null || value.isEmpty()) {
+            return "";
+        }
+        int length = value.length();
+        while (length > 0 && isTagDelimiter(value.charAt(length - 1))) {
+            length--;
+        }
+        return value.substring(0, length);
+    }
+
+    private static boolean isTagDelimiter(char candidate) {
+        for (char delimiter : TAG_DELIMITERS) {
+            if (delimiter == candidate) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private void toggleStyleClass(Node node, String styleClass, boolean enabled) {
+        if (enabled) {
+            if (!node.getStyleClass().contains(styleClass)) {
+                node.getStyleClass().add(styleClass);
+            }
+            return;
+        }
+        node.getStyleClass().remove(styleClass);
     }
 }
